Make sure link wraps entire image

--- a/project/static/css/application.css
+++ b/project/static/css/application.css
@@ -3,6 +3,10 @@
   height: 250px;
 }
 
+#photo-feed a {
+  display: inline-block;
+}
+
 #photo-feed img {
   height: 100%;
 }
